<resources>
    <string name="app_name">MyCash</string>
    <string name="welcome_to_studinfo">Selamat Datang di StudInfo</string>
    <string name="intro_desc">Kami menawarkan sistem informasi mahasiswa yang lengkap dengan pengelolaan data yang aman dan fitur yang intuitif.</string>
    <string name="register">Daftar</string>
    <string name="already_have_account">Sudah memiliki akun?</string>
    <string name="login">Masuk</string>
    <string name="sign_in_now">Masuk Sekarang</string>
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="email">Email</string>
    <string name="dont_have_account">Belum memiliki akun?</string>
    <string name="sign_up">Daftar Akun</string>
    <string name="username_required">Nama tidak boleh kosong</string>
    <string name="email_required">Email tidak boleh kosong</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="password_required">Password tidak boleh kosong</string>
    <string name="password_must_be_at_least_6_characters">Password minimal 6 karakter</string>
    <string name="confirm_password_required">Konfirmasi password tidak boleh kosong</string>
    <string name="password_not_match">Konfirmasi password tidak sama</string>
    <string name="halo">Halo,</string>
    <string name="account_not_found">Akun tidak ditemukan</string>
    <string name="username_already_exist">Nama pengguna sudah digunakan</string>
    <string name="forgot_password">Lupa Kata Sandi</string>
    <string name="otp">OTP</string>
    <string name="otp_confirm">Konfirmasi OTP</string>
    <string name="resend_otp">Kirim Ulang OTP</string>
    <string name="otp_sent_successfully">Kode OTP telah berhasil dikirim ke email Anda</string>
    <string name="confirm_otp">Konfirmasi OTP</string>
    <string name="confirm">Konfirmasi</string>
    <string name="timer">01:00</string>
    <string name="resend">Kirim Ulang</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="confirm_new_password">Konfirmasi Kata Sandi Baru</string>
    <string name="continue_text">Selanjutnya</string>
    <string name="enter_your_email">Masukkan email yang terhubung ke akun Anda</string>
    <string name="otp_sent_successfully_and_reset_password">Kami telah mengirimkan kode OTP ke alamat email Anda. Silakan masukkan kode tersebut dan buat kata sandi baru.</string>
    <string name="retry">Coba Lagi</string>
    <string name="sign_in">Masuk Ke Akun</string>
    <string name="text_error_name_cannot_empty">Nama tidak boleh kosong</string>
    <string name="text_error_email_cannot_empty">Email tidak boleh kosong</string>
    <string name="text_error_email_invalid">Format email tidak valid</string>
    <string name="text_error_password_cannot_empty">Kata sandi tidak boleh kosong</string>
    <string name="text_error_password_less_than_8_char">Kata sandi minimal 8 karakter</string>
    <string name="text_password_does_not_match">Kata sandi tidak sama\n</string>
    <string name="text_error_otp_cannot_empty">OTP tidak boleh kosong</string>
    <string name="text_error_otp_less_than_6_char">Kode OTP harus 6 karakter</string>
    <string name="an_error_occurred">An Error Occurred</string>
    <string name="add_outlet">Toko Baru</string>
    <string name="add_photo">Unggah Foto</string>
    <string name="outlet_name">Nama Toko</string>
    <string name="outlet_name_example">Cth: Warung Makan Jaya</string>
    <string name="add_outlet_logo">Unggah Logo</string>
    <string name="outlet_type">Bidang Usaha</string>
    <string name="outlet_type_example"><![CDATA[Cth: Makanan & Minuman]]></string>
    <string name="outlet_phone_number">Nomor Telepon Toko</string>
    <string name="outlet_phone_number_example">Cth: 081212341234</string>
    <string name="outlet_address">Alamat Toko</string>
    <string name="outlet_address_example">Cth: Jl. Perintis Kemerdekaan, Ds. Karangbahagia</string>
    <string name="outlet_district">Kecamatan</string>
    <string name="outlet_district_example">Cth: Cikarang Utara</string>
    <string name="outlet_city">Kota/Kabupaten</string>
    <string name="outlet_city_example">Cth: Kabupaten Bekasi</string>
    <string name="outlet_province">Provinsi</string>
    <string name="outlet_province_example">Cth: Jawa Barat</string>
    <string name="save">Simpan</string>
    <string name="outlet_list">Daftar Toko</string>
    <string name="text_error_outlet_name_cannot_empty">Nama toko tidak boleh kosong</string>
    <string name="text_error_outlet_type_cannot_empty">Bidang usaha tidak boleh kosong</string>
    <string name="text_error_outlet_phone_cannot_empty">Nomo telepon tidak boleh kosong</string>
    <string name="text_error_outlet_address_cannot_empty">Alamat toko tidak boleh kosong</string>
    <string name="text_error_outlet_district_cannot_empty">Kecamatan tidak boleh kosong</string>
    <string name="text_error_outlet_city_cannot_empty">Kota/Kabupaten tidak boleh kosong</string>
    <string name="text_error_outlet_province_cannot_empty">Provinsi tidak boleh kosong</string>
    <string name="manage">Kelola</string>
    <string name="point_of_sale">POS</string>
    <string name="setting">Pengaturan</string>
    <string name="logout">Keluar Akun</string>
    <string name="update">Ubah</string>
    <string name="outlet_information">Informasi Toko</string>
    <string name="user_information">Informasi Pengguna</string>
    <string name="user_phone_number">Nomor Telepon</string>
    <string name="unknown">Tidak diketahui</string>
    <string name="detail">Detail</string>
    <string name="account_management">Akun Saya</string>
    <string name="account_management_desc">Atur informasi pribadi Anda</string>
    <string name="outlet_management">Toko Saya</string>
    <string name="outlet_management_desc">Atur informasi toko Anda</string>
    <string name="printer_management">Mesin Cetak</string>
    <string name="printer_management_desc">Hubungkan printer untuk mencetak nota transaksi</string>
    <string name="receipt_management">Nota Transaksi</string>
    <string name="receipt_management_desc">Pratinjau nota transaksi Anda</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="text_error_phone_cannot_empty">Nomor telepon tidak boleh kosong</string>
    <string name="add_new_product">Produk Baru</string>
    <string name="product">Produk</string>
    <string name="category">Kategori</string>
    <string name="add_new_category">Kategori Baru</string>
    <string name="statement">Laporan</string>
    <string name="view_statement">Lihat Laporan</string>
    <string name="delete_category_dialog_title">Hapus Kategori %1$s?</string>
    <string name="delete_product_dialog_title">Hapus Produk %1$s?</string>
    <string name="delete_category_dialog_desc">"Semua produk yang ada pada kategori ini akan ikut terhapus. Apakah anda yakin ingin menghapus kategori %1$s? "</string>
    <string name="delete_product_dialog_desc">"Produk tidak bisa digunakan dalam transaksi lagi. Apakah anda yakin ingin menghapus produk %1$s? "</string>
    <string name="cancel">Batal</string>
    <string name="delete">Hapus</string>
    <string name="category_required">Nama kategori tidak boleh kosong</string>
    <string name="product_name">Nama Produk</string>
    <string name="product_name_example">Cth: Ayam Goreng</string>
    <string name="product_description">Deskripsi</string>
    <string name="product_description_example">Cth: Ayam goreng tepung crispy</string>
    <string name="product_price">Harga</string>
    <string name="product_price_example">Cth: 12000</string>
    <string name="product_status">Status</string>
    <string name="product_stock">Stok</string>
    <string name="product_stock_example">Cth: 100</string>
    <string name="product_status_desc">Produk dapat ditambahkan ke dalam transaksi?</string>
    <string name="product_category">Kategori</string>
    <string name="product_category_example">Pilih Kategori</string>
    <string name="unlimited">Tidak Terbatas</string>
    <string name="session_expired">Session Expired</string>
    <string name="text_error_description_cannot_empty">Deskripsi tidak boleh kosong</string>
    <string name="text_error_price_cannot_empty">Harga tidak boleh kosong</string>
    <string name="text_error_stock_cannot_empty">Stok tidak boleh kosong</string>
    <string name="session">Sesi Kasir</string>
    <string name="add_new_session">Sesi Baru</string>
    <string name="cashier">Kasir</string>
    <string name="add_new_transaction">Transaksi Baru</string>
    <string name="input_date">Pilih Tanggal</string>
    <string name="dash">-</string>
    <string name="today">Hari ini</string>
    <string name="seven_days">7 hari</string>
    <string name="thirty_days">30 hari</string>
    <string name="newest">Terbaru</string>
    <string name="shift">Shift</string>
    <string name="date_range">%1$s - %2$s</string>
    <string name="morning">Pagi</string>
    <string name="evening">Malam</string>
    <string name="active">Aktif</string>
    <string name="session_not_found">Sessions not found</string>
    <string name="oldest">Terlama</string>
    <string name="session_date">Tanggal</string>
    <string name="session_date_example">Cth: 25/01/2025</string>
    <string name="session_shift">Shift</string>
    <string name="session_shift_example">Pilih Shift</string>
    <string name="starting_cash">Uang Modal</string>
    <string name="starting_cash_example">Cth: 250000</string>
    <string name="active_session_not_found">Tidak ada sesi aktif</string>
    <string name="add_new_session_dialog_desc">Silakan buat sesi terlebih dahulu</string>
    <string name="text_error_date_cannot_empty">Tanggal tidak boleh kosong</string>
    <string name="text_error_starting_cash_cannot_empty">Uang modal tidak boleh kosong</string>
    <string name="session_user">Nama</string>
    <string name="summary">Ringkasan</string>
    <string name="revenue">Pendapatan</string>
    <string name="session_total_transaction">Jumlah Transaksi</string>
    <string name="session_successful_transaction">Transaksi Berhasil</string>
    <string name="session_voided_transaction">Transaksi Dibatalkan</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="cash">Tunai</string>
    <string name="qris">QRIS</string>
    <string name="recap_by">Direkap pada %1$s</string>
    <string name="settlement">Rekap Sesi</string>
    <string name="print">Cetak</string>
    <string name="session_detail">Detail Sesi</string>
    <string name="transaction_count">%1$d trx</string>
    <string name="pcs_count">%1$d pcs</string>
    <string name="active_session_found">Sesi Sudah Aktif</string>
    <string name="add_active_session_dialog_desc">Tidak dapat membuat sesi baru, karena terdapat sesi yang sedang aktif. Silakan lakukan transaksi dengan sesi yang sudah aktif</string>
    <string name="category_not_found">Tidak Ada Kategori</string>
    <string name="add_new_category_dialog_desc">Silakan buat kategori terlebih dahulu</string>
    <string name="share">Bagikan</string>
    <string name="close">Tutup</string>
    <string name="download">Unduh</string>
    <string name="rp">Rp</string>
    <string name="top_product">Top 5 Produk</string>
    <string name="total_price">Total Harga</string>
    <string name="price_per_pcs">%1$s/Pcs</string>
    <string name="stock_with_title">Stok: %1$s</string>
    <string name="out_of_stock">Stok Habis</string>
    <string name="all">Semua Kategori</string>
    <string name="all_categories">Semua Kategori</string>
    <string name="quantity">Jumlah</string>
    <string name="add_to_cart">Masukkan Keranjang</string>
    <string name="quantity_value">%d</string>
    <string name="max_stock_reached">Stok tidak mencukupi, maks %1$d</string>
</resources>