<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:gravity="center"    android:orientation="vertical"    android:paddingHorizontal="22dp"    android:paddingVertical="12dp">    <androidx.constraintlayout.widget.ConstraintLayout        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginVertical="2dp">        <com.google.android.material.imageview.ShapeableImageView            android:id="@+id/iv_profile_photo"            android:layout_width="112dp"            android:layout_height="112dp"            android:adjustViewBounds="true"            android:scaleType="centerCrop"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent"            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"            tools:src="@tools:sample/avatars" />        <com.google.android.material.imageview.ShapeableImageView            android:id="@+id/btn_add_logo"            android:layout_width="28dp"            android:layout_height="28dp"            android:layout_marginEnd="4dp"            android:background="@drawable/cv_background"            android:foreground="?android:attr/selectableItemBackground"            android:src="@drawable/round_insert_photo_24"            app:contentPadding="5dp"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintEnd_toEndOf="parent"            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"            app:tint="@color/white" />    </androidx.constraintlayout.widget.ConstraintLayout>    <TextView        android:id="@+id/tv_outlet_name"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="10dp"        android:layout_marginTop="6dp"        android:layout_marginBottom="2dp"        android:fontFamily="@font/nunito_sans_medium"        android:text="@string/outlet_name"        android:textAlignment="textStart"        android:textSize="14sp" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_outlet_name"        style="@style/RoundedTextInputLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:endIconMode="clear_text"        app:hintEnabled="false">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_outlet_name"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/outlet_name_example"            android:imeOptions="flagNavigateNext"            android:inputType="text"            android:padding="12dp"            android:textSize="14sp" />    </com.google.android.material.textfield.TextInputLayout>    <TextView        android:id="@+id/tv_outlet_type"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="10dp"        android:layout_marginTop="6dp"        android:layout_marginBottom="2dp"        android:fontFamily="@font/nunito_sans_medium"        android:text="@string/outlet_type"        android:textAlignment="textStart"        android:textSize="14sp" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_outlet_type"        style="@style/RoundedTextInputLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:endIconMode="clear_text"        app:hintEnabled="false">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_outlet_type"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/outlet_type_example"            android:imeOptions="flagNavigateNext"            android:inputType="text"            android:padding="12dp"            android:textSize="14sp" />    </com.google.android.material.textfield.TextInputLayout>    <TextView        android:id="@+id/tv_outlet_phone_number"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="10dp"        android:layout_marginTop="6dp"        android:layout_marginBottom="2dp"        android:fontFamily="@font/nunito_sans_medium"        android:text="@string/outlet_phone_number"        android:textAlignment="textStart"        android:textSize="14sp" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_outlet_phone_number"        style="@style/RoundedTextInputLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:endIconMode="clear_text"        app:hintEnabled="false">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_outlet_phone_number"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/outlet_phone_number_example"            android:imeOptions="flagNavigateNext"            android:inputType="phone"            android:padding="12dp"            android:textSize="14sp" />    </com.google.android.material.textfield.TextInputLayout>    <TextView        android:id="@+id/tv_outlet_address"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="10dp"        android:layout_marginTop="6dp"        android:layout_marginBottom="2dp"        android:fontFamily="@font/nunito_sans_medium"        android:text="@string/outlet_address"        android:textAlignment="textStart"        android:textSize="14sp" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_outlet_address"        style="@style/RoundedTextInputLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:endIconMode="clear_text"        app:hintEnabled="false">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_outlet_address"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/outlet_address_example"            android:imeOptions="flagNavigateNext"            android:inputType="text"            android:padding="12dp"            android:textSize="14sp" />    </com.google.android.material.textfield.TextInputLayout>    <TextView        android:id="@+id/tv_outlet_district"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="10dp"        android:layout_marginTop="6dp"        android:layout_marginBottom="2dp"        android:fontFamily="@font/nunito_sans_medium"        android:text="@string/outlet_district"        android:textAlignment="textStart"        android:textSize="14sp" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_outlet_district"        style="@style/RoundedTextInputLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:endIconMode="clear_text"        app:hintEnabled="false">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_outlet_district"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/outlet_district_example"            android:imeOptions="flagNavigateNext"            android:inputType="text"            android:padding="12dp"            android:textSize="14sp" />    </com.google.android.material.textfield.TextInputLayout>    <TextView        android:id="@+id/tv_outlet_city"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="10dp"        android:layout_marginTop="6dp"        android:layout_marginBottom="2dp"        android:fontFamily="@font/nunito_sans_medium"        android:text="@string/outlet_city"        android:textAlignment="textStart"        android:textSize="14sp" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_outlet_city"        style="@style/RoundedTextInputLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:endIconMode="clear_text"        app:hintEnabled="false">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_outlet_city"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/outlet_city_example"            android:imeOptions="flagNavigateNext"            android:inputType="text"            android:padding="12dp"            android:textSize="14sp" />    </com.google.android.material.textfield.TextInputLayout>    <TextView        android:id="@+id/tv_outlet_province"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="10dp"        android:layout_marginTop="6dp"        android:layout_marginBottom="2dp"        android:fontFamily="@font/nunito_sans_medium"        android:text="@string/outlet_province"        android:textAlignment="textStart"        android:textSize="14sp" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_outlet_province"        style="@style/RoundedTextInputLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:endIconMode="clear_text"        app:hintEnabled="false">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_outlet_province"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/outlet_province_example"            android:imeOptions="actionDone"            android:inputType="text"            android:padding="12dp"            android:textSize="14sp" />    </com.google.android.material.textfield.TextInputLayout>    <FrameLayout        android:id="@+id/btn_save"        android:layout_width="match_parent"        android:layout_height="72dp"        android:maxHeight="72dp"        app:layout_constraintBottom_toTopOf="@id/tv_already_have_account"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/form_layout">        <com.airbnb.lottie.LottieAnimationView            android:id="@+id/loading"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:visibility="gone"            app:lottie_autoPlay="true"            app:lottie_loop="true"            app:lottie_rawRes="@raw/loading_state"            app:lottie_speed="2"            tools:visibility="visible" />        <Button            android:id="@+id/btn"            style="@style/RoundedButton"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:fontFamily="@font/nunito_sans_bold"            android:text="@string/save"            android:textAllCaps="false"            android:textSize="16sp" />    </FrameLayout></LinearLayout>