<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.resetpassword.InputEmailFragment">

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/forgot_password"
        android:textAlignment="textStart"
        android:textColor="@color/md_dark_primary"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_enter_your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans_medium"
        android:maxLines="1"
        android:text="@string/enter_your_email"
        android:textAlignment="textStart"
        android:textSize="16sp" />

    <include
        android:id="@+id/form_layout"
        layout="@layout/form_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/send_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textSize="16sp" />

</LinearLayout>