<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:layout_marginVertical="6dp"    android:background="@drawable/search_view_rounded_bg"    android:padding="12dp">    <LinearLayout        android:id="@+id/ll_shift"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:orientation="horizontal"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent">        <TextView            android:id="@+id/tv_date"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:text="@string/input_date"            android:textAlignment="center"            android:textSize="14sp" />        <TextView            android:id="@+id/tv_dash"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginHorizontal="6dp"            android:fontFamily="@font/nunito_sans_medium"            android:text="@string/dash"            android:textAlignment="center"            android:textSize="14sp" />        <TextView            android:id="@+id/tv_shift"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:text="@string/shift"            android:textAlignment="center"            android:textSize="14sp" />    </LinearLayout>    <TextView        android:id="@+id/tv_user"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:ellipsize="end"        android:fontFamily="@font/nunito_sans_medium"        android:maxLines="2"        android:text="@string/username"        android:textAlignment="center"        android:textSize="14sp"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/ll_shift" />    <TextView        android:id="@+id/tv_status"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="12dp"        android:drawablePadding="4dp"        android:fontFamily="@font/nunito_sans_bold"        android:gravity="center_vertical"        android:text="@string/product_status"        android:textColor="@color/md_dark_primary"        android:textSize="14sp"        android:visibility="gone"        app:drawableStartCompat="@drawable/round_radio_button_checked_24"        app:drawableTint="@color/md_dark_primary"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/tv_user"        tools:visibility="visible" />    <TextView        android:id="@+id/tv_revenue"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:fontFamily="@font/nunito_sans_bold"        android:textAlignment="center"        android:textColor="@color/md_dark_primary"        android:textSize="18sp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toTopOf="parent"        tools:text="Rp 350.000" /></androidx.constraintlayout.widget.ConstraintLayout>