<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:orientation="vertical"    android:paddingHorizontal="22dp"    android:paddingVertical="12dp">    <TextView        android:id="@+id/tv_session_date"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="10dp"        android:layout_marginTop="6dp"        android:layout_marginBottom="2dp"        android:fontFamily="@font/nunito_sans_medium"        android:text="@string/session_date"        android:textAlignment="textStart"        android:textSize="14sp" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_session_date"        style="@style/RoundedTextInputLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:endIconMode="clear_text"        app:hintEnabled="false">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_session_date"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/session_date_example"            android:imeOptions="flagNavigateNext"            android:inputType="date"            android:padding="12dp"            android:textSize="14sp" />    </com.google.android.material.textfield.TextInputLayout>    <TextView        android:id="@+id/tv_session_shift"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="10dp"        android:layout_marginTop="6dp"        android:layout_marginBottom="2dp"        android:fontFamily="@font/nunito_sans_medium"        android:text="@string/session_shift"        android:textAlignment="textStart"        android:textSize="14sp" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_session_shift"        style="@style/RoundedDropdown"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:hintEnabled="false">        <AutoCompleteTextView            android:id="@+id/et_session_shift"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:enabled="false"            android:fontFamily="@font/nunito_sans_medium"            android:inputType="none"            android:padding="12dp"            android:text="@string/session_shift_example"            android:textSize="14sp" />    </com.google.android.material.textfield.TextInputLayout>    <TextView        android:id="@+id/tv_starting_cash"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginStart="10dp"        android:layout_marginTop="6dp"        android:layout_marginBottom="2dp"        android:fontFamily="@font/nunito_sans_medium"        android:text="@string/starting_cash"        android:textAlignment="textStart"        android:textSize="14sp" />    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_starting_cash"        style="@style/RoundedTextInputLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:endIconMode="clear_text"        app:hintEnabled="false"        app:prefixText="Rp"        app:prefixTextColor="@color/md_dark_primary">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_starting_cash"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/starting_cash_example"            android:imeOptions="flagNavigateNext"            android:inputType="number"            android:padding="12dp"            android:textSize="14sp" />    </com.google.android.material.textfield.TextInputLayout>    <FrameLayout        android:id="@+id/btn_save"        android:layout_width="match_parent"        android:layout_height="72dp"        android:maxHeight="72dp"        app:layout_constraintBottom_toTopOf="@id/tv_already_have_account"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/form_layout">        <com.airbnb.lottie.LottieAnimationView            android:id="@+id/loading"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:visibility="gone"            app:lottie_autoPlay="true"            app:lottie_loop="true"            app:lottie_rawRes="@raw/loading_state"            app:lottie_speed="2"            tools:visibility="visible" />        <Button            android:id="@+id/btn"            style="@style/RoundedButton"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:fontFamily="@font/nunito_sans_bold"            android:text="@string/save"            android:textAllCaps="false"            android:textSize="16sp" />    </FrameLayout></LinearLayout>